# AgentOrchestratorLayer

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_UPDATE.md  CLAUDE.md  Dockerfile  EXCHANGE_CONFIGURATION.md  IMPLEMENTATION_LOG.md  OPENWEBUI_READY.md  README.md  README_SESSION_WORK.md  SESSION_SUMMARY.md  SETUP_OPENWEBUI.md  SYMBOL_RESOLVER_USAGE.md  TROUBLESHOOTING_OPENWEBUI.md  conversations.db-shm  conversations.db-wal  docker-compose.yml  domains.bootstrap.json  main.py  pyproject.toml  requirements.txt  test_async_orchestrator.py  test_capability_live_eval.py  test_comma_spacing.py  test_communication_error_mapping.py  test_delivery_layer.py  test_end_to_end_symbols.py  test_execution_engine_dag.py  test_finance_manifest_metadata.py  test_finance_symbol_resolution.py  test_function_calling_planner.py  test_general_handler_resilience.py  test_intent_catalog_hints.py  test_intent_domain_hints.py  test_intent_notify_enrichment.py  test_intent_question_unit_matrix.py  test_main_intent_normalization.py  test_manifest.py  (+18 more)
api/: openai_server.py
communication-domain/: Dockerfile  README.md  requirements.txt
conversation/: manager.py
entry/: cli.py  telegram.py
execution/: engine.py  result_combiner.py  task_state_store.py
intent/: adapter.py
memory/: __init__.py  store.py
models/: selector.py
observability/: logger.py
orchestrator/: orchestrator.py
planner/: function_calling_planner.py  goal_resolver.py  service.py  task_decomposer.py
registry/: db.py  domain_registry.py  http_handler.py  loader.py
shared/: models.py  (+4 more)
(+47 files in other folders)
