[project]
name = "agents-orchestrator-layer"
version = "0.1.0"
description = "Multi-layer agent orchestrator with deterministic core and isolated LLM"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
orchestrator = "main:main"

[tool.pytest.ini_options]
norecursedirs = ["scripts", ".venv", "__pycache__"]
